--- a/DaemonCharacter/DaemonCharacter/Views/Campaign/Index.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Campaign/Index.cshtml
@@ -12,48 +12,21 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table>
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.startYear)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.maxPlayers)
-        </th>
-        <th></th>
-    </tr>
 
 @foreach (var item in Model)
 {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.shortDescription)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.briefing)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.startYear)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.maxPlayers)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.userMaster.UserName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-            @Html.ActionLink("Details", "Details", new { id = item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.id })
-        </td>
-    </tr>
-}
 
-</table>
+    <div class="col-md-4 table-bordered animated wow" style="margin:5px;border-radius:5px;">
+        <strong>@Html.DisplayFor(modelItem => item.name)</strong><br />
+        @Html.DisplayFor(modelItem => item.shortDescription) <br />
+        <strong>Start Year: </strong>@Html.DisplayFor(modelItem => item.startYear) &nbsp; | &nbsp; 
+        <strong>Remaining Players: </strong>@Html.DisplayFor(modelItem => item.remainingPlayers) <br />
+
+        <a href="~/Campaign/Edit/@item.id" class="fa fa-edit animated wow fadeInDown" title="Edit"> </a>&nbsp;&nbsp;
+        <a href="~/Campaign/Details/@item.id" class="fa fa-details animated wow fadeInDown" title="Details"> </a>&nbsp;&nbsp;
+        <a href="~/Campaign/Delete/@item.id" class="fa fa-delete animated wow fadeInDown" title="Delete"> </a>
+    </div>
+
+}
+<br />
 @{Html.RenderAction("ListAvailableCampaigns");}
