--- a/DaemonCharacter/DaemonCharacter/Views/Attribute/Index.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Attribute/Index.cshtml
@@ -4,7 +4,10 @@
     ViewBag.Title = "List of Attributes";
 }
 
-<h2>Index</h2>
+<h2 class="animated wow fadeInUp" data-wow-delay="0.2s">
+    <i class="fa fa-logo animated wow fadeInDown"></i>
+    &nbsp;List of Attributes
+</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
