--- a/DaemonCharacter/DaemonCharacter/Views/Shared/_Menu.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Shared/_Menu.cshtml
@@ -33,6 +33,8 @@
 
                                 <li>@Html.ActionLink("Characters", "Index", "Character")</li>
                                 <li>@Html.ActionLink("Campaigns", "Index", "Campaign")</li>
+                                <li>@Html.ActionLink("Sessions", "Index", "Session")</li>
+                                <li>@Html.ActionLink("Buy Items", "Index", "Campaign")</li>
 
                             </ul>
                         </li>
