--- a/DaemonCharacter/DaemonCharacter/Views/Character/CreateNPC.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Character/CreateNPC.cshtml
@@ -65,6 +65,14 @@
         </div>
 
         <div class="editor-label">
+            @Html.LabelFor(model => model.remainingLife)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.remainingLife)
+            @Html.ValidationMessageFor(model => model.remainingLife)
+        </div>
+
+        <div class="editor-label">
             @Html.LabelFor(model => model.publicAnnotations)
         </div>
         <div class="editor-field">
