--- a/DaemonCharacter/DaemonCharacter/Views/Shared/_Layout.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
+    @RenderSection("FirstScripts", required: false)
 
 </head>
 <body>
@@ -91,7 +92,6 @@
                             <a href="#"><i class="fa fa-youtube"></i></a>
                         </p>
                     </div>
-
                 </div>
             </div>
         </div>
