--- a/DaemonCharacter/DaemonCharacter/Views/Character/CreateNPC.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Character/CreateNPC.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DaemonCharacter.Models.NonPlayerModel
 
 @{
-    ViewBag.Title = "CreateNPC";
+    ViewBag.Title = "Create NPC Form";
 }
 
 <h2 class="animated wow fadeInUp" data-wow-delay="0.2s">
@@ -13,7 +13,8 @@
     <title>Creating a new NPC</title>
 </head>
 
-@using (Html.BeginForm(null, null, FormMethod.Post, new { id = "formCreateNonPlayer" })) {
+@using (Html.BeginForm(null, null, FormMethod.Post, new { id = "formCreateNonPlayer" }))
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
@@ -55,7 +56,7 @@
             @Html.EditorFor(model => model.chalengeLevel)
             @Html.ValidationMessageFor(model => model.chalengeLevel)
         </div>
-        
+
         <div class="editor-label">
             @Html.LabelFor(model => model.maxLife)
         </div>
@@ -80,15 +81,16 @@
             @Html.ValidationMessageFor(model => model.publicAnnotations)
         </div>
     </fieldset>
-}
-<aside>
-    <label>Available Attributes</label>
-    @{Html.RenderAction("ListNonCharacter", "CharacterAttribute", new { model = "NonPlayerModel" });}
-</aside>
+    <aside>
+        <label>Available Attributes</label>
+        @{Html.RenderAction("_ListNonCharacter", "CharacterAttribute", new { model = "NonPlayerModel" });}
+    </aside>
+            }
+
 <p id="messages">
 </p>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-}
 <script type="text/javascript" src="@Url.Content("~/Scripts/CharacterForms.js")"></script>
+}
