--- a/DaemonCharacter/DaemonCharacter/Views/Item/Create.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Item/Create.cshtml
@@ -29,6 +29,14 @@
         </div>
 
         <div class="editor-label">
+            @Html.LabelFor(model => model.category)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.category)
+            @Html.ValidationMessageFor(model => model.category)
+        </div>
+
+        <div class="editor-label">
             <input type="button" value="Add Attribute" id="AddAttributeButton" class="button" />&nbsp;
             <input type="button" value="Remove all" id="RemoveAllAttributeButton" class="button" />
         </div>
