--- a/DaemonCharacter/DaemonCharacter/Views/Item/Index.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Item/Index.cshtml
@@ -20,6 +20,9 @@
         <th>
             @Html.DisplayNameFor(model => model.effect)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.category)
+        </th>
         <th></th>
     </tr>
 
@@ -30,6 +33,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.effect)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.category)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
