--- a/DaemonCharacter/DaemonCharacter/Views/Shared/_Layout.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Shared/_Layout.cshtml
@@ -36,11 +36,7 @@
 
     @Styles.Render("~/Content/css")
 
-    @Scripts.Render("~/bundles/modernizr")
-
-    @Scripts.Render("~/bundles/jquery")
-    @RenderSection("scripts", required: false)
-    @RenderSection("FirstScripts", required: false)
+    @*@RenderSection("FirstScripts", required: false)*@
 
 </head>
 <body>
@@ -97,18 +93,24 @@
         </div>
     </footer>
 
+    @Scripts.Render("~/bundles/modernizr")
+
+    @Scripts.Render("~/bundles/jquery")
+
+
     <!-- jQuery -->
     <script src="~/Scripts/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
     <script src="~/Scripts/bootstrap.min.js"></script>
     <script src="~/Scripts/wow.min.js" type="text/javascript"></script>
-    <script src="~/Scripts/tutorial.js"></script>
+    @*<script src="~/Scripts/tutorial.js"></script>*@
     <script src="~/Content/owl/owl.carousel.js" type="text/javascript"></script>
     <!-- SmartMenus jQuery plugin -->
     <script type="text/javascript" src="~/Scripts/jquery.smartmenus.js"></script>
     <!-- SmartMenus jQuery Bootstrap Addon -->
     <script type="text/javascript" src="~/Scripts/jquery.smartmenus.bootstrap.js"></script>
-    <script src="~/Scripts/contact.js" type="text/javascript"></script>
+    @*<script src="~/Scripts/contact.js" type="text/javascript"></script>*@
 
+    @RenderSection("scripts", required: false)
 </body>
 </html>
