--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Create.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Create.cshtml
@@ -7,10 +7,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>AttributeViewModel</h4>
         <hr />
@@ -47,13 +47,18 @@
             </div>
         </div>
 
+        <div class="form-group col-md-6">
+            @{Html.RenderAction("_ListAvailableForBonus");}
+        </div>
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-success" />
             </div>
         </div>
+
     </div>
-}
+                }
 
 <div>
     @Html.ActionLink("Back to List", "Index")
