--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Edit.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Edit.cshtml
@@ -10,7 +10,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>AttributeViewModel</h4>
         <hr />
@@ -49,10 +49,16 @@
             </div>
         </div>
 
+
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-success" />
             </div>
+        </div>
+        <hr />
+        <div class="form-control">
+            @ViewBag.Message
         </div>
     </div>
 }
