--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Home/Index.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Home/Index.cshtml
@@ -1,18 +1,15 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
-<div id="carousel-example-generic" class="carousel slide carousel-fade" data-ride="carousel">
+﻿<div id="carousel-example-generic" class="carousel slide carousel-fade" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
         <li data-target='#carousel-example-generic' data-slide-to='0' class='active'>
-            <img ID="Image1" src="~/Images/12.jpg" width="50" height="50" class="img-circle" />
+            <img ID="Image1" src="~/Images/15.jpg" width="50" height="50" class="img-circle" />
         </li>
         <li data-target='#carousel-example-generic' data-slide-to='1'>
             <img ID="Image2" src="~/Images/13.jpg" style="width:50px;height:50px;" class="img-circle" />
         </li>
 
         <li data-target='#carousel-example-generic' data-slide-to='2'>
-            <img ID="Image3" src="~/Images/14.jpg"
+            <img ID="Image3" src="~/Images/arkanun.jpg"
                  style="width:50px;height:50px;" class="img-circle" />
         </li>
     </ol>
@@ -22,7 +19,7 @@
             <div class="main-text hidden-xs">
                 <div class="col-md-12 text-center">
                     <h1>
-                        TEST TEST TEST TEST TEST <br /> <span class="yellow">- TEST  </span>
+                         Just a Hub for <strong>RPG</strong>
                     </h1>
                     @*<div class="">
                         <asp:HyperLink ID="HyperLink1" class="btn btn-clear btn-sm btn-min-block">Login</asp:HyperLink>
@@ -35,8 +32,7 @@
             <div class="main-text hidden-xs">
                 <div class="col-md-12 text-center">
                     <h1>
-                        A <b class="yellow">Goal</b> without <b class="yellow">a plan</b><br />
-                        <span class="span">is just a wish</span>
+                        A Goal without a plan<br />is just a wish
                     </h1>
                     @*<div class="">
                         <asp:HyperLink ID="HyperLink3" class="btn btn-clear btn-sm btn-min-block">learn More</asp:HyperLink>
@@ -48,6 +44,7 @@
         <div class="item three">
             <div class="main-text hidden-xs">
                 <div class="col-md-12 text-center">
+                    <h1>Let's go fun?</h1>
                     @*<h1>
                         You cannot<b class="yellow"> believe</b> in <b class="yellow">God</b><br />
                         <span class="span">until you believe in yourself.</span>
@@ -69,6 +66,7 @@
     </a>
 </div>
 <!-- Carousel -->
+
 <!-- Service Section -->
 <section id="services" class="padding100">
     <div class="container">
@@ -77,96 +75,47 @@
                 <span><strong>Features</strong></span>
             </h2>
         </div>
-        <!-- ./ end row -->
         <div class="row">
             <div class="col-md-4">
                 <i class="fa fa-laptop animated wow fadeInDown"></i>
                 <div class="sc-inner">
                     <h4>
-                        Responsive Design
+                        Creation of campaigns
                     </h4>
                     <p>
-                        Want more Bootstrap themes & templates? Subscribe to our mailing list to receive
-                        an update when new items arrive!
+                        Create your own campaign and call your friends to enter your world
                     </p>
                 </div>
             </div>
-            <!-- ./ end service box -->
             <div class="col-md-4">
                 <i class="fa fa-support animated wow fadeInDown" data-wow-delay="0.2s"></i>
                 <div class="sc-inner">
                     <h4>
-                        Quick Support
+                        Customize your campaign sessions
                     </h4>
                     <p>
-                        Want more Bootstrap themes & templates? Subscribe to our mailing list to receive
-                        an update when new items arrive!
+                        Plan your sessions, enemies, NPC and more!
                     </p>
                 </div>
             </div>
-            <!-- ./ end service box -->
             <div class="col-md-4">
-                <i class="fa fa-paper-plane-o animated wow fadeInDown" data-wow-delay="0.4s"></i>
+                <i class="fa fa-shield animated wow fadeInDown" data-wow-delay="0.4s"></i>
                 <div class="sc-inner">
                     <h4>
-                        Mailchimp Newsletter
+                        Create and customize your character form
                     </h4>
                     <p>
-                        Want more Bootstrap themes & templates? Subscribe to our mailing list to receive
-                        an update when new items arrive!
+                        Create your character form, see combos and buy items to maximize your chances of survivor
                     </p>
                 </div>
             </div>
-            <!-- ./ end service box -->
         </div>
-        <!-- ./ end row -->
-        <div class="row">
-            <div class="col-md-4">
-                <i class="fa fa-pie-chart animated wow fadeInUp" data-wow-delay="0.6s"></i>
-                <div class="sc-inner">
-                    <h4>
-                        Awesome Stats
-                    </h4>
-                    <p>
-                        Want more Bootstrap themes & templates? Subscribe to our mailing list to receive
-                        an update when new items arrive!
-                    </p>
-                </div>
-            </div>
-            <!-- ./ end service box -->
-            <div class="col-md-4">
-                <i class="fa fa-puzzle-piece animated wow fadeInUp" data-wow-delay="0.8s"></i>
-                <div class="sc-inner">
-                    <h4>
-                        Easy update
-                    </h4>
-                    <p>
-                        Want more Bootstrap themes & templates? Subscribe to our mailing list to receive
-                        an update when new items arrive!
-                    </p>
-                </div>
-            </div>
-            <!-- ./ end service box -->
-            <div class="col-md-4">
-                <i class="fa fa-youtube-play animated wow fadeInUp" data-wow-delay="0.10s"></i>
-                <div class="sc-inner">
-                    <h4>
-                        Video Support
-                    </h4>
-                    <p>
-                        Want more Bootstrap themes & templates? Subscribe to our mailing list to receive
-                        an update when new items arrive!
-                    </p>
-                </div>
-            </div>
-            <!-- ./ end service box -->
-        </div>
-        <!-- ./ end row -->
     </div>
 
 </section>
 <!-- ./ End Service Section -->
-<!-- Page Content -->
+
+@*<!-- Page Content -->
 <section class="service-info padding100">
     <div class="container">
         <div class="row">
@@ -198,7 +147,7 @@
             <!-- ./ app info box -->
         </div>
     </div>
-</section>
+</section>*@
 <!-- /.container -->
 <!-- Products Section -->
 @*<section id="products" class="products-list padding100">
