--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Shared/_Menu.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Shared/_Menu.cshtml
@@ -4,7 +4,7 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="~/Home/"><i class="fa fa-logo"></i>PLANET RPG</a>
+            <a class="navbar-brand" href="~/Home/"><i class="fa fa-logo"></i> Role Play Hub</a>
         </div>
         <div class="navbar-collapse collapse">
             <!-- Left nav -->
