--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Player/_CreateBasicInformation.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Player/_CreateBasicInformation.cshtml
@@ -1,5 +1,7 @@
 ﻿@model DaemonCharacter.Application.ViewModels.Player.PlayerViewModel
 
+<h3>Basic information</h3>
+<hr />
 <div class="col-xs-6">
     <div class="control-group">
         @Html.LabelFor(model => model.Campaigns, htmlAttributes: new { @class = "control-label col-md-2" })
