--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Shared/_Layout.cshtml
@@ -29,8 +29,8 @@
     <link href="~/fonts/font-awesome.min.css" rel="stylesheet" type="text/css" />
 
 
-    <title>@ViewBag.Title - PLANET RPG</title>
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <title>@ViewBag.Title - Role Play Hub</title>
+    <link href="~/favicon.png" rel="shortcut icon" type="image/x-icon" />
 
     <meta name="viewport" content="width=device-width" />
 
@@ -56,14 +56,13 @@
                     <div class="col-md-3 col-sm-4 col-md-push-3 animated wow fadeInLeft" data-wow-delay="0.2s">
                         <h3 class="fh5co-lead">About</h3>
                         <ul>
-                            <li><a href="#">Tour</a></li>
-                            <li><a href="#">Company</a></li>
+                            <li><a href="#">About RPG Systems</a></li>
+                            <li><a href="http://github.com/saleslessa" target="_blank">About Site Creator</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3 col-sm-4 col-md-push-3 animated wow fadeInLeft" data-wow-delay="0.4s">
-                        <h3 class="fh5co-lead">Support</h3>
+                        <h3 class="fh5co-lead">Rules are Rules</h3>
                         <ul>
-                            <li><a href="#">Help Center</a></li>
                             <li><a href="#">Terms of Service</a></li>
                         </ul>
                     </div>
@@ -77,7 +76,7 @@
                     </div>
 
                     <div class="col-md-3 col-sm-12 col-md-pull-9 animated wow fadeInLeft" data-wow-delay="0.8s">
-                        <div class="fh5co-footer-logo"><a href="javascript:void(0);"><i class="fa fa-logo"></i>PLANET RPG</a></div>
+                        <div class="fh5co-footer-logo"><a href="javascript:void(0);"><i class="fa fa-logo"></i> Role Play Hub</a></div>
                         <p class="fh5co-copyright"><small>&copy; 2016. All Rights Reserved.</small></p>
                         <p class="fh5co-social-icons">
                             <a href="#"><i class="fa fa-twitter"></i></a>
